# audio_exp

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/audio_exp/: API.md  __init__.py  _lowlevel.pyi  audio_segment.py  note.md  npaudioop.py  pyaudioop.py
python/audio_exp/notebooks/: pydub.ipynb  wav.ipynb
python/tests/: common.py  test_audio_segment.py  test_simple.py  test_write_simple.py
src/: lib.rs
