[package]
name = "audio-exp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "audio_exp"
crate-type = ["cdylib"]

[dependencies]
hound = "3.5.1"
log = "0.4.21"
pyo3 = "0.19.0"
pyo3-log = "0.9.0"
rust-numpy = "0.1.0"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
