[package]
name = "audio-exp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "audio_exp"
crate-type = ["cdylib"]

[dependencies]
hound = "3.5.1"
log = "0.4.21"
numpy = "0.21.0"
# based on https://pyo3.rs/v0.21.2/migration#migrating-from-older-pyo3-versions to silience warnings
# TODO follow the instructions to update to 0.21+ style
pyo3 = { version = "0.21.1", features = ["gil-refs"] }
symphonia = { version = "0.5.4", features = ["mp3"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
